--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
 <body>
 <div id="app">
 <div class="container">
-    <select name="" id="">
+    <select name="" id="" v-model="state" @change="getData">
     <option value="">Select State</option>
     <option v-for="(list, index) in stateList" :key="index" :value="list">{{list}}</option>
     </select>
     <div class="panel">
         <div class="Cases">
             <h2>cases</h2>
-            <h3></h3>
+            <h3>{{cases}}</h3>
         </div>
 
         <div class="Death">
             <h2>Death</h2>
-            <h3></h3>
+            <h3>{{death}}</h3>
         </div>
 
         <div class="Recovered">
             <h2>Recovered</h2>
-            <h3></h3>
+            <h3>{{recovered}}</h3>
         </div>
         </div>
     </div>
