tried using axios

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 <div id="app">
 <div class="container">
-    <select name="" id="" v-model="state" @change="getData">
+    <select name="" id="" v-model="state">
     <option value="">Select State</option>
-    <option v-for="(list, index) in stateList" :key="index" :value="list">{{list}}</option>
+    <option v-for="(list, index) in statelist" :key="index" :value="list">{{list}}</option>
     </select>
     <div class="panel">
         <div class="Cases">
